# Toolkit-for-Professional-Data-Science-Workflow-Example

./: .gitignore  LICENSE  README.md  dvc.yaml
.devcontainer/: docker-compose.yml
docker/dev/: Dockerfile  docker-compose.yml
eda/: .devcontainer.json  eda_sample.py  pyproject.toml
modelling/: .devcontainer.json  modelling_sample.py  pyproject.toml
preprocessing/: .devcontainer.json  preprocessing_sample.py  pyproject.toml
