
[tool.poetry]
name = "eda"
version = "0.1.0"
description = ""
authors = ["predictforce"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
plotly = "^5.1.0"
matplotlib = "^3.4.2"
kaleido = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"