
[tool.poetry]
name = "eda"
version = "0.1.0"
description = ""
authors = ["predictforce"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"