
[tool.poetry]
name = "modelling"
version = "0.1.0"
description = ""
authors = ["predictforce"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
scikit-learn = "^0.24.2"
pickle-mixin = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"